--- a/it/progetti/index.html
+++ b/it/progetti/index.html
@@ -40,35 +40,37 @@
   </div>
   <div class="desktop-menu">
     <a href="../studio">Studio</a>
-    <a href="../news">News</a>
-    <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
+    <a href="progetti">Progetti</a>
+    <!--<a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
-      <li><a href="index">Tutti i progetti</a></li>
-      <li><a href="index.html?filter=section1">Rigenerazione spazi urbani</a></li>
-      <li><a href="index.html?filter=section2">Parchi e giardini</a></li>
-      <li><a href="index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a></li>
-      <li><a href="index.html?filter=section4">Inserimento ambientale di infrastrutture</a></li>
-      <li><a href="index.html?filter=section5">Architettura</a></li>
-    </ul>
-    <a href="../contatti">Contatti</a>
+      <li><a href="progetti/index">Tutti i progetti</a></li>
+      <li><a href="progetti/index.html?filter=section1">Rigenerazione spazi urbani</a></li>
+      <li><a href="progetti/index.html?filter=section2">Parchi e giardini</a></li>
+      <li><a href="progetti/index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a></li>
+      <li><a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a></li>
+      <li><a href="progetti/index.html?filter=section5">Architettura</a></li>
+    </ul>-->
+    <a href="news">News</a>
+    <a href="contatti">Contatti</a>
   </div>
 </header>
 
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
-  <a href="../studio">Studio</a>
-  <a href="../news">News</a>
-  <div class="sub-links">
+  <a href="studio">Studio</a>
+  <a href="progetti">Progetti</a>
+  <!--<div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
     <div id="subNavLinks" class="sub-nav-links">
-      <a href="index">Tutti i progetti</a>
-      <a href="index.html?filter=section1">Rigenerazione spazi urbani</a>
-      <a href="index.html?filter=section2">Parchi e giardini</a>
-      <a href="index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a>
-      <a href="index.html?filter=section4">Inserimento ambientale di infrastrutture</a>
-      <a href="index.html?filter=section5">Architettura</a>
+      <a href="progetti/index">Tutti i progetti</a>
+      <a href="progetti/index.html?filter=section1">Rigenerazione spazi urbani</a>
+      <a href="progetti/index.html?filter=section2">Parchi e giardini</a>
+      <a href="progetti/index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a>
+      <a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a>
+      <a href="progetti/index.html?filter=section5">Architettura</a>
     </div>
-  </div>
+  </div>-->
+  <a href="../news">News</a>
   <a href="../contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
     <a href="../../en/projects/index">EN</a>&nbsp;&nbsp;|&nbsp;
@@ -88,46 +90,55 @@
 
 <!--#1-->
   <section class="centered">
-      <div class="box">
-        <button class="show-all-btn showSectionButton">Tutti i progetti</button>
-        <button class="filter-btn showSectionButton" data-filter="section1">Rigenerazione spazi urbani</button>
-        <button class="filter-btn showSectionButton" data-filter="section2">Parchi e giardini</button>
-        <button class="filter-btn showSectionButton" data-filter="section3">Riqualificazione ambientale e paesaggistica</button>
-        <button class="filter-btn showSectionButton" data-filter="section4">Inserimento ambientale di infrastrutture</button>
-        <button class="filter-btn showSectionButton" data-filter="section5">Architettura</button>
-      </div>
+    <button class="show-all-btn showSectionButton">Tutti i progetti</button>
+    <button class="filter-btn showSectionButton" data-filter="section1">Rigenerazione spazi urbani</button>
+    <button class="filter-btn showSectionButton" data-filter="section2">Parchi e giardini</button>
+    <button class="filter-btn showSectionButton" data-filter="section3">Riqualificazione ambientale e paesaggistica</button>
+    <button class="filter-btn showSectionButton" data-filter="section4">Inserimento ambientale di infrastrutture</button>
+    <button class="filter-btn showSectionButton" data-filter="section5">Architettura</button>
   </section>
+
   <div class="thumbnail-shower">
 <!--#2-->
-  <a class="thumb" href="#"><section class="thumbnail news-section section1">
-    <p>+</p>
+  <section class="thumbnail news-section section1"><a class="thumb" href="#">
+    <p class="cache">+</p>
     <img src="../../library/home/pan-home-vicenza-2.jpg" alt="Parco della Pace - Vicenza">
-  </section><p>Parco della Pace - Vicenza</p><p class="quote">21.03.2024</p></a>
+    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+  </a></section>
+<!--#2-->
+  <section class="thumbnail news-section section1"><a class="thumb" href="#">
+    <p class="cache">+</p>
+    <img src="../../library/home/pan-home-vicenza-2.jpg" alt="Parco della Pace - Vicenza">
+    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+  </a></section>
 <!--#3-->
-  <a class="thumb" href="#"><section class="thumbnail news-section section2">
-    <p>+</p>
+  <section class="thumbnail news-section section2"><a class="thumb" href="#">
+    <p class="cache">+</p>
     <img src="../../library/home/pan-home-vicenza-2.jpg" alt="Parco della Pace - Vicenza">
-  </section><p>Parco della Pace - Vicenza</p><p class="quote">21.03.2024</p></a>
+    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+  </a></section>
 <!--#4-->
-  <a class="thumb" href="#"><section class="thumbnail news-section section3">
-    <p>+</p>
+  <section class="thumbnail news-section section3"><a class="thumb" href="#">
+    <p class="cache">+</p>
     <img src="../../library/home/pan-home-vicenza-2.jpg" alt="Parco della Pace - Vicenza">
-  </section><p>Parco della Pace - Vicenza</p><p class="quote">21.03.2024</p></a>
+    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+  </a></section>
 <!--#5-->
-  <a class="thumb" href="#"><section class="thumbnail news-section section4">
-    <p>+</p>
+  <section class="thumbnail news-section section4"><a class="thumb" href="#">
+    <p class="cache">+</p>
     <img src="../../library/home/pan-home-vicenza-2.jpg" alt="Parco della Pace - Vicenza">
-  </section><p>Parco della Pace - Vicenza</p><p class="quote">21.03.2024</p></a>
+    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+  </a></section>
 <!--#6-->
-  <a class="thumb" href="#"><section class="thumbnail news-section section5">
-    <p>+</p>
+  <section class="thumbnail news-section section5"><a class="thumb" href="#">
+    <p class="cache">+</p>
     <img src="../../library/home/pan-home-vicenza-2.jpg" alt="Parco della Pace - Vicenza">
-  </section><p>Parco della Pace - Vicenza</p><p class="quote">21.03.2024</p></a>
+    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+  </a></section>
 </div>
 </main>
 
 <footer>
-  <img class="svg-img footer-logo" src="../../elements/pan_associati_ext.svg">
   <div class="footer">
     <div>
       <a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a>
