--- a/it/progetti/parco-della-pace.html
+++ b/it/progetti/parco-della-pace.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PA+N Associati</title>
-  <link rel="stylesheet" href="../styles.css">
-  <link rel="shortcut icon" href="../elements/icone.ico">
+  <link rel="stylesheet" href="../../styles.css">
+  <link rel="shortcut icon" href="../../elements/icone.ico">
 
   <meta name="author" content="PA+N Associati"> 
   <meta name="description" content="La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.">
@@ -26,10 +26,10 @@
     <div class="bar2"></div>
     <div class="bar3"></div>
   </div>
-  <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
+  <a href="../index"><img class="svg-img" src="../../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch" id="LS1">
-    <a href="../en/news">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="../../en/projects/index">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
@@ -39,7 +39,7 @@
     </label>
   </div>
   <div class="desktop-menu">
-    <a href="studio">Studio</a>
+    <a href="../studio">Studio</a>
     <a href="progetti">Progetti</a>
     <!--<a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
@@ -70,10 +70,10 @@
       <a href="progetti/index.html?filter=section5">Architettura</a>
     </div>
   </div>-->
-  <a href="news">News</a>
-  <a href="contatti">Contatti</a>
+  <a href="../news">News</a>
+  <a href="../contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
-    <a href="../en/news">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="../../en/projects/index">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
@@ -86,42 +86,32 @@
 </div>
 
 <main>
-<!--#0-->
 
 <!--#1-->
-  <section class="centered">
-    <button class="show-all-btn showSectionButton">Tutte le news</button>
-    <button class="filter-btn showSectionButton" data-filter="section1">Eventi</button>
-    <button class="filter-btn showSectionButton" data-filter="section2">Pubblicazioni</button>
-    <button class="filter-btn showSectionButton" data-filter="section3">Articoli</button>
-    <button class="filter-btn showSectionButton" data-filter="section4">Premi</button>
+  <section class="cartouche">
+    <ul>
+      <li><b>Cliente</b><br>Comune di Vicenza</li>
+      <li><b>Partner</b><br>ITS S.r.l., EMF, Franco Zagari</li>
+      <li><b>Fase di progetto</b><br>Progettazione completa, DL</li>
+      <li><b>Tipologia</b><br>Riqualificazione urbana</li>
+      <li><b>Superficie</b><br>650.000 mq</li>
+      <li><b>Anno</b><br>2015 - in corso</li>
+      <li><b>Luogo</b><br>Vicenza</li>
+      <li><b>Team</b><br>Arch. Gaetano Selleri, Arch. paesaggista Lorenzo Baldini, landscape Designer Sara Valassina, et al.</li>
+    </ul>
   </section>
-<!--#2-->
-  <section class="mono news-section section2">
-      <h1>Pubblicazione</h1>
-      <h3>Top Scape Paysage n° 53</h3>
-      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
-      <div class="box">
-        <a href="404" class="classic-link">Scopri di <span>+</span></a>
-      </div>
+<!--#1-->
+  <section class="mono">
+    <h2>Il Parco Della Pace</h2>
+    <h3>Parco urbano nato dalla riconversione dell’ex aeroporto Dal Molin</h3>
+    <p>Il Parco della Pace è il cuore verde di Vicenza e si prefigge l’ambizioso obiettivo di diventare una vera e propria macchina ecologica oltre che una destinazione in grado di attrarre visitatori da tutto il territorio circostante.</p>
+    <p>Questo spazio pubblico di nuova generazione è un invito ad esplorare e abbracciare la natura in una città, un’oasi per attività all’aperto, sport, eventi, un centro vibrante di manifestazioni culturali e, soprattutto, un contenitore di biodiversità in cui la bellezza della natura regna sovrana. Il Parco della Pace è una soluzione strategica per affrontare le sfide del cambiamento climatico, promuovendo servizi ecosistemici e soluzioni basate sulla natura. Con ben 8 km di canali e 70.000 mq di zone umide progettate per prevenire inondazioni future, il parco è una testimonianza tangibile dell’impegno dei progettisti nei confronti dell’ambiente. Questo approccio non solo migliora il drenaggio urbano, ma crea nuovi habitat per la fauna e la flora locali che, grazie anche al disegno del paesaggio, cambieranno il modo in cui interagiamo con la natura. Infine, la riconversione degli hangar dell’ex aeroporto Dal Molin, ha portato alla realizzazione di un hub culturale, con musei e spazi polifunzionali dedicati all’arte.</p>
   </section>
-<!--#3-->
-  <section class="mono news-section section2">
-      <h1>Pubblicazione</h1>
-      <h3>Rivista Industria delle costruzioni n°493</h3>
-      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
-      <div class="box">
-        <a href="404" class="classic-link">Scopri di <span>+</span></a>
-      </div>
-  </section>
-<!--#4-->
-  <section class="mono news-section section2">
-      <h1>Pubblicazione</h1>
-      <h3>Top Scape Paysage n° 46</h3>
-      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
-      <div class="box">
-        <a href="404" class="classic-link">Scopri di <span>+</span></a>
-      </div>
+<!--#1-->
+  <section class="mono">
+    <div class="box">
+      <img src="../../library/home/pan-home-chisiamo.jpg" alt="Parco della Pace - Vicenza">
+    </div>
   </section>
 </main>
 
@@ -147,6 +137,6 @@
     <br>Qualità ISO 9001 - 2008. Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.</p>
 </footer>
 
-<script src="../script-page.js"></script>
+<script src="../script-home.js"></script>
 </body>
 </html>
