--- a/it/studio.html
+++ b/it/studio.html
@@ -40,8 +40,8 @@
   </div>
   <div class="desktop-menu">
     <a href="studio">Studio</a>
-    <a href="news">News</a>
-    <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
+    <a href="progetti">Progetti</a>
+    <!--<a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
       <li><a href="progetti/index">Tutti i progetti</a></li>
       <li><a href="progetti/index.html?filter=section1">Rigenerazione spazi urbani</a></li>
@@ -49,7 +49,8 @@
       <li><a href="progetti/index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a></li>
       <li><a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a></li>
       <li><a href="progetti/index.html?filter=section5">Architettura</a></li>
-    </ul>
+    </ul>-->
+    <a href="news">News</a>
     <a href="contatti">Contatti</a>
   </div>
 </header>
@@ -57,8 +58,8 @@
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
   <a href="studio">Studio</a>
-  <a href="news">News</a>
-  <div class="sub-links">
+  <a href="progetti">Progetti</a>
+  <!--<div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
     <div id="subNavLinks" class="sub-nav-links">
       <a href="progetti/index">Tutti i progetti</a>
@@ -68,7 +69,8 @@
       <a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a>
       <a href="progetti/index.html?filter=section5">Architettura</a>
     </div>
-  </div>
+  </div>-->
+  <a href="news">News</a>
   <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
     <a href="../en/studio">EN</a>&nbsp;&nbsp;|&nbsp;
@@ -85,18 +87,53 @@
 
 <main>
 <!--#0-->
-  <section class="accueil-page">
-    <img src="../library/home/pan-home-chisiamo.jpg" alt="Parco della Pace - Vicenza">
-  </section>
+
 <!--#1-->
-  <section class="mono">
-      <h2>Studio</h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec laoreet nulla. Morbi ornare tempor quam, eget tempus est dictum ac. Nulla facilisi. Fusce vitae orci non justo finibus rutrum at id ex. Integer dapibus, ante quis volutpat vestibulum, erat orci gravida massa, sit amet sagittis lectus felis lacinia eros. Donec vestibulum, ligula eget cursus lobortis, enim nibh dapibus ante, in dictum purus lorem vel risus. Donec sed malesuada felis, in aliquam tellus. Nunc viverra, leo eu cursus placerat, augue ante dignissim ipsum, a varius augue leo in mauris.</p>
-      <p>Vestibulum consequat ipsum mi, semper mollis augue vulputate sit amet. Aenean feugiat eget arcu sed euismod. Fusce ac consequat justo. Aliquam egestas tortor et vulputate molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec tristique rhoncus lacinia. Duis eleifend, dui vel iaculis tincidunt, ex diam tristique purus, quis efficitur velit libero ac orci. Morbi ultrices molestie lacus, vitae varius nisi tempor ac.</p>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec laoreet nulla. Morbi ornare tempor quam, eget tempus est dictum ac. Nulla facilisi. Fusce vitae orci non justo finibus rutrum at id ex. Integer dapibus, ante quis volutpat vestibulum, erat orci gravida massa, sit amet sagittis lectus felis lacinia eros. Donec vestibulum, ligula eget cursus lobortis, enim nibh dapibus ante, in dictum purus lorem vel risus. Donec sed malesuada felis, in aliquam tellus. Nunc viverra, leo eu cursus placerat, augue ante dignissim ipsum, a varius augue leo in mauris.</p>
+  <section class="centered">
+    <button class="filter-btn showSectionButton" data-filter="section1">Chi siamo</button>
+    <button class="filter-btn showSectionButton" data-filter="section2">Team</button>
+    <button class="filter-btn showSectionButton" data-filter="section3">Lavora con noi</button>
   </section>
 <!--#2-->
-  <section class="mono">
+  <section class="mono news-section section1">
+      <h2>Chi siamo</h2>
+      <p>PAN Associati S.R.L. è una società fondata a Milano nel 2001 e costituita da un team multidisciplinare di professionisti, tra cui architetti, paesaggisti, agronomi e forestali. Operiamo nei settori della progettazione architettonica e del paesaggio, della pianificazione territoriale e della consulenza ambientale sia in Italia che all'estero.</p>
+      <p>PAN si distingue come studio di riferimento nel settore ambientale, vantando un portfolio che include la progettazione paesaggistica in aree naturali di grande pregio, quali parchi nazionali e regionali, la riqualificazione di grandi parchi e spazi urbani, progetti paesaggistici di inserimento ambientale di grandi opere infrastrutturali, il restauro di parchi e giardini storici, la riqualificazione ecologica di aree degradate, nonché la progettazione di giardini pensili e verticali e l'implementazione di progetti di forestazione urbana.</p>
+  </section>
+  <section class="mono news-section section1">
+      <h2>Approccio</h2>
+      <p>Con oltre due decenni di esperienza, PAN Associati adotta un approccio multidisciplinare che fonde competenze tecniche e teoriche avanzate.</p>
+      <p>La nostra visione si concentra sul recupero e la riqualificazione di spazi degradati, trasformandoli in ambienti vivibili e sostenibili che arricchiscano le comunità locali attraverso un approccio sensibile nei confronti dell’ambiente e della natura.</p>
+      <p>Il nostro processo di progettazione presta attenzione a ogni aspetto dell'ecosistema locale, mirando alla creazione di paesaggi funzionali e resilienti. Integriamo principi di ecologia urbana nei nostri progetti, promuovendo la biodiversità attraverso la creazione di nuovi habitat ed ecosistemi. Ci impegniamo a fornire benefici ecologici significativi mediante soluzioni basate sulla natura (Nature Based Solutions, NBS), contribuendo così attivamente alla lotta contro i cambiamenti climatici.</p>
+  </section>
+  <section class="mono news-section section1">
+      <h2>Servizi</h2>
+      <h1>Progettazione e direzione lavori</h1>
+      <p>L’attività di progettazione, svolta sia nel settore dell’edilizia pubblica che privata, è seguita in tutte le sue fasi, dalla progettazione preliminare alla direzione lavori e coordinamento sicurezza in fase di progettazione ed esecuzione. Pan può vantare nel suo portfolio la realizzazione di numerose opere complesse, che includono componenti ingegneristiche, architettoniche oltre che ad paesaggistiche ed agronomiche.</p>
+      <h1>Consulenza ambientale</h1>
+      <p>Oltre che alla progettazione PAN Associati si occupa di servizi legati alla consulenza ambientale. Offriamo consulenze specialistiche, tra cui studi di fattibilità, due diligence, analisi agronomiche, censimenti e analisi botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali (Via, Vinca, Relazioni paesaggistiche etc..) per autorizzazioni ambientali di piani e progetti.  Grazie alla nostra esperienza consolidata e alla profonda conoscenza della legislazione ambientale, siamo in grado di guidare i progetti attraverso il complesso processo di ottenimento delle autorizzazioni ambientali. Ciò assicura che ogni progetto rispetti le norme vigenti e contribuisca alla conservazione e alla tutela dell’ambiente naturale.</p>
+  </section>
+  <section class="mono news-section section1">
+    <h2>Clients & Partners</h2>
+      <div class="partners-wall">
+        <a href="https://milanotangenziali.it/"><img class="svg-img partner" src="../library/studio/partners/01.svg"></a>
+        <a href="https://mmspa.eu/"><img class="svg-img partner" src="../library/studio/partners/02.svg"></a>
+        <a href="https://go-fit.it/"><img class="svg-img partner" src="../library/studio/partners/03.svg"></a>
+        <a href="https://www.fondazionefieramilano.it/it/index.html"><img class="svg-img partner" src="../library/studio/partners/04.svg"></a>
+        <a href="https://www.ferrovienord.it/"><img class="svg-img partner" src="../library/studio/partners/05.svg"></a>
+        <a href="https://www.csvlombardia.it/milano/"><img class="svg-img partner" src="../library/studio/partners/06.svg"></a>
+        <a href="https://www.comune.vicenza.it/"><img class="svg-img partner" src="../library/studio/partners/07.svg"></a>
+        <a href="https://www.comune.taranto.it/"><img class="svg-img partner" src="../library/studio/partners/08.svg"></a>
+        <a href="https://www.comune.milano.it/"><img class="svg-img partner" src="../library/studio/partners/09.svg"></a>
+        <a href="https://comune.messina.it/it"><img class="svg-img partner" src="../library/studio/partners/10.svg"></a>
+        <a href="https://www.comune.alessandria.it/homepage"><img class="svg-img partner" src="../library/studio/partners/11.svg"></a>
+        <a href="https://www.brianzacque.it/"><img class="svg-img partner" src="../library/studio/partners/12.svg"></a>
+        <a href="https://www.bmsprogetti.it/it/"><img class="svg-img partner" src="../library/studio/partners/13.svg"></a>
+        <a href="https://barrecaelavarra.com/"><img class="svg-img partner" src="../library/studio/partners/14.svg"></a>
+      </div>
+  </section>
+<!--#3-->
+  <section class="mono news-section section2">
       <h2>Team</h2>
       <div class="container">
         <div class="item">
@@ -151,8 +188,7 @@
         </div>
       </div>
   </section>
-<!--#3-->
-  <section class="mono">
+  <section class="mono news-section section2">
       <h2>Hanno lavorato con noi</h2>
       <div id="list">
         <p class="note">Raffaele Selleri</p>
@@ -202,50 +238,69 @@
       </div>
   </section>
 <!--#4-->
-  <section class="footer-prev">
-    <h2>Clients & Partners</h2>
-      <div class="partners-wall">
-        <a href="https://milanotangenziali.it/"><img class="svg-img partner" src="../library/studio/partners/01.svg"></a>
-        <a href="https://mmspa.eu/"><img class="svg-img partner" src="../library/studio/partners/02.svg"></a>
-        <a href="https://go-fit.it/"><img class="svg-img partner" src="../library/studio/partners/03.svg"></a>
-        <a href="https://www.fondazionefieramilano.it/it/index.html"><img class="svg-img partner" src="../library/studio/partners/04.svg"></a>
-        <a href="https://www.ferrovienord.it/"><img class="svg-img partner" src="../library/studio/partners/05.svg"></a>
-        <a href="https://www.csvlombardia.it/milano/"><img class="svg-img partner" src="../library/studio/partners/06.svg"></a>
-        <a href="https://www.comune.vicenza.it/"><img class="svg-img partner" src="../library/studio/partners/07.svg"></a>
-        <a href="https://www.comune.taranto.it/"><img class="svg-img partner" src="../library/studio/partners/08.svg"></a>
-        <a href="https://www.comune.milano.it/"><img class="svg-img partner" src="../library/studio/partners/09.svg"></a>
-        <a href="https://comune.messina.it/it"><img class="svg-img partner" src="../library/studio/partners/10.svg"></a>
-        <a href="https://www.comune.alessandria.it/homepage"><img class="svg-img partner" src="../library/studio/partners/11.svg"></a>
-        <a href="https://www.brianzacque.it/"><img class="svg-img partner" src="../library/studio/partners/12.svg"></a>
-        <a href="https://www.bmsprogetti.it/it/"><img class="svg-img partner" src="../library/studio/partners/13.svg"></a>
-        <a href="https://barrecaelavarra.com/"><img class="svg-img partner" src="../library/studio/partners/14.svg"></a>
+  <section class="mono news-section section3">
+      <h2>Lavora con noi</h2>
+      <p>In un contesto collaborativo, PA+N Associati ti offre l'opportunità di far parte di un team dinamico, dove la tua crescita personale e professionale è al centro della nostra attenzione. Il nostro studio, focalizzato sull'innovazione e la ricerca, si impegna a trasformare ogni progetto in un'avventura di scoperta. Collaborerai con un gruppo di professionisti appassionati, impegnati nel plasmare il futuro dell'architettura attraverso la progettazione e la gestione dei progetti.</p>
+  </section>
+  <section class="mono news-section section3">
+      <h2>Posizione aperte</h2>
+      <p>Benvenuti nella sezione delle opportunità nella nostra azienda, dove il talento si unisce alla passione per creare un futuro straordinario insieme. Esplora le posizioni aperte e preparati a dare il via alla tua prossima avventura professionale con noi. Siamo pronti ad accogliere individui motivati e ambiziosi che desiderano fare la differenza nel loro lavoro e nella vita di chi ci circonda.</p>
+      <div class="box">
+        <button class="divtoggler" onclick="toggleDiv('div1')">Architetto del paesaggio</button>
+        <button class="divtoggler" onclick="toggleDiv('div2')">Toggle Div 2</button>
       </div>
+      <div class="toggle-div" id="div1">
+        <h3>Architetto del paesaggio</h3>
+        <h1>Responsabilità</h1>
+        <ul class="list">
+        <li>Partecipazione attiva a tutte le fasi del processo di progettazione.</li>
+        <li>Collaborare con il team nella progettazione e sviluppo di progetti paesaggistici e di riqualificazione urbana.</li>
+        <li>Contribuire con idee innovative e soluzioni sostenibili ai progetti in corso.</li>
+        <li>Buone capacità di ideazione del concept progettuale.</li>
+        <li>Elaborazione grafica e testuale per le diverse fasi di progetto.</li>
+        </ul>
+        <h1>Qualifiche</h1>
+        <ul class="list">
+        <li>Laurea in Architettura o Architettura del Paesaggio.</li>
+        <li>Esperienza professionale di almeno 1-3 anno nel settore.</li>
+        <li>Buona conoscenza dei principali software di progettazione e modellazione ( Autocad, suite Adobe, Office, eventuali software per la computistica, SketchUp, la conoscenza di modellazione in BIM sarà considerata un Plus).</li>
+        <li>Capacità di lavorare in team e di problem solving.</li>
+        <li>Buone capacità organizzative di intraprendenza.</li>
+        <li>Buone capacità comunicative e di presentazione.</li>
+        </ul>
+      </div>
+  </section>
+  <section class="mono news-section section3">
+      <h1>Scrivici!</h1>
+      <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?><!--" method="post">-->
+        <p>Nome:</p>
+        <input class="fill" type="text" id="name" name="name" placeholder="Maria Rossi" required>
+        <p>Email:</p>
+        <input class="fill" type="email" id="email" name="email" placeholder="mariarossi@esempio.it" required>
+        <p>Messagio:</p>
+        <textarea id="message" name="message" placeholder="Ciao associati!" required></textarea>
+        <label class="file-label" for="document">Carica un curriculum</label>
+        <input type="file" id="document" name="document" accept=".pdf,.doc,.docx" required>
+        <input class="send" type="submit" value="Invia candidatura">
+      </form>
   </section>
 </main>
 
 <footer>
-  <img class="svg-img footer-logo" src="../elements/pan_associati_ext.svg">
-  <div class="footer">
-    <div>
-      <a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a>
-    </div>
-    <div>
-      Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
-      <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
-      <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a>
-    </div>
-    <div>
-      <a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a>
-    </div>
-    <div>
-      <a href="https://www.accredia.it/"><img class="svg-img accred" src="../elements/accredia.svg"></a>
-      <a href="https://www.sgs.com/it-it"><img class="svg-img accred" src="../elements/sgs.svg"></a>
-    </div>
-  </div>
-  <p class="note">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Construit avec &#9825; par <a href="https://baptistelevaux.github.io/">BSL</a>
-    <br>Qualità ISO 9001 - 2008. Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.</p>
+  <p class="note"><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6 - 20128 Milano (MI) - Italia</a>
+  
+  <p class="note">Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a> - Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a> - Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
+
+  <p class="note"><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
+
+  <a href="https://www.accredia.it/"><img class="svg-img accred" src="../elements/accredia.svg"></a>
+  <a href="https://www.sgs.com/it-it"><img class="svg-img accred" src="../elements/sgs.svg"></a>
+
+  <p class="note">Qualità ISO 9001 - 2008. Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.</p>
+
+  <p class="note">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Construit avec &#9825; par <a href="https://baptistelevaux.github.io/">BSL</a></p>
 </footer>
 
-<script src="../script-page.js"></script>
+<script src="../script-page2.js"></script>
 </body>
 </html>
