--- a/it/index.html
+++ b/it/index.html
@@ -40,8 +40,8 @@
   </div>
   <div class="desktop-menu">
     <a href="studio">Studio</a>
-    <a href="news">News</a>
-    <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
+    <a href="progetti">Progetti</a>
+    <!--<a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
       <li><a href="progetti/index">Tutti i progetti</a></li>
       <li><a href="progetti/index.html?filter=section1">Rigenerazione spazi urbani</a></li>
@@ -49,7 +49,8 @@
       <li><a href="progetti/index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a></li>
       <li><a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a></li>
       <li><a href="progetti/index.html?filter=section5">Architettura</a></li>
-    </ul>
+    </ul>-->
+    <a href="news">News</a>
     <a href="contatti">Contatti</a>
   </div>
 </header>
@@ -57,8 +58,8 @@
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
   <a href="studio">Studio</a>
-  <a href="news">News</a>
-  <div class="sub-links">
+  <a href="progetti">Progetti</a>
+  <!--<div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
     <div id="subNavLinks" class="sub-nav-links">
       <a href="progetti/index">Tutti i progetti</a>
@@ -68,7 +69,8 @@
       <a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a>
       <a href="progetti/index.html?filter=section5">Architettura</a>
     </div>
-  </div>
+  </div>-->
+  <a href="news">News</a>
   <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
     <a href="../en/index">EN</a>&nbsp;&nbsp;|&nbsp;
@@ -171,11 +173,7 @@
       <p>Offriamo inoltre consulenze specialistiche nel settore ambientale e paesaggistico, tra cui studi di fattibilità, analisi agronomiche, botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali per l’autorizzazione di piani e progetti.
       <p>Nel nostro processo creativo, prestiamo attenzione a ogni aspetto dell'ecosistema locale, mirando a sviluppare paesaggi funzionali e resilienti.</p>
       <div class="box">
-        <a class="classic-link" href="404">Rigenerazione spazi urbani&nbsp;&nearr;</a>
-        <a class="classic-link" href="404">Parchi e giardini&nbsp;&nearr;</a>
-        <a class="classic-link" href="404">Riqualificazione ambientale e paesaggistica&nbsp;&nearr;</a>
-        <a class="classic-link" href="404">Inserimento ambientale di infrastrutture&nbsp;&nearr;</a>
-        <a class="classic-link" href="404">Architettura&nbsp;&nearr;</a>
+        <a class="classic-link" href="404">Scopri di <span>+</span></a>
       </div>
     </div>
     <div class="slider" id="slider2">
@@ -244,7 +242,7 @@
       </div>
     </div>
   </section>
-<!--#4-->
+<!--
   <section class="footer-prev">
     <h2>News</h2>
       <div class="module">
@@ -252,11 +250,10 @@
         <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Rivista Industria delle costruzioni n°493</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
         <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Top Scape Paysage n° 46</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
       </div>
-  </section>
+  </section>-->
 </main>
 
 <footer>
-  <img class="svg-img footer-logo" src="../elements/pan_associati_ext.svg">
   <div class="footer">
     <div>
       <a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a>
