--- a/it/privacy.html
+++ b/it/privacy.html
@@ -40,8 +40,8 @@
   </div>
   <div class="desktop-menu">
     <a href="studio">Studio</a>
-    <a href="news">News</a>
-    <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
+    <a href="progetti">Progetti</a>
+    <!--<a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
       <li><a href="progetti/index">Tutti i progetti</a></li>
       <li><a href="progetti/index.html?filter=section1">Rigenerazione spazi urbani</a></li>
@@ -49,7 +49,8 @@
       <li><a href="progetti/index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a></li>
       <li><a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a></li>
       <li><a href="progetti/index.html?filter=section5">Architettura</a></li>
-    </ul>
+    </ul>-->
+    <a href="news">News</a>
     <a href="contatti">Contatti</a>
   </div>
 </header>
@@ -57,8 +58,8 @@
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
   <a href="studio">Studio</a>
-  <a href="news">News</a>
-  <div class="sub-links">
+  <a href="progetti">Progetti</a>
+  <!--<div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
     <div id="subNavLinks" class="sub-nav-links">
       <a href="progetti/index">Tutti i progetti</a>
@@ -68,7 +69,8 @@
       <a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a>
       <a href="progetti/index.html?filter=section5">Architettura</a>
     </div>
-  </div>
+  </div>-->
+  <a href="news">News</a>
   <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
     <a href="../en/privacy">EN</a>&nbsp;&nbsp;|&nbsp;
@@ -109,7 +111,6 @@
 </main>
 
 <footer>
-  <img class="svg-img footer-logo" src="../elements/pan_associati_ext.svg">
   <div class="footer">
     <div>
       <a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a>
@@ -131,6 +132,6 @@
     <br>Qualità ISO 9001 - 2008. Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.</p>
 </footer>
 
-<script src="../script-page.js"></script>
+<script src="../script-home.js"></script>
 </body>
 </html>
