--- a/it/progetti/index.html
+++ b/it/progetti/index.html
@@ -40,7 +40,7 @@
   </div>
   <div class="desktop-menu">
     <a href="../studio">Studio</a>
-    <a href="progetti">Progetti</a>
+    <a href="../progetti">Progetti</a>
     <!--<a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
       <li><a href="progetti/index">Tutti i progetti</a></li>
@@ -50,15 +50,15 @@
       <li><a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a></li>
       <li><a href="progetti/index.html?filter=section5">Architettura</a></li>
     </ul>-->
-    <a href="news">News</a>
-    <a href="contatti">Contatti</a>
+    <a href="../news">News</a>
+    <a href="../contatti">Contatti</a>
   </div>
 </header>
 
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
-  <a href="studio">Studio</a>
-  <a href="progetti">Progetti</a>
+  <a href="../studio">Studio</a>
+  <a href="../progetti">Progetti</a>
   <!--<div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
     <div id="subNavLinks" class="sub-nav-links">
